[gd_scene load_steps=46 format=3 uid="uid://whqjyfi6r2in"]

[ext_resource type="Texture2D" uid="uid://c2n75ywdx865y" path="res://assets/backgrounds/judgesSide.png" id="1_cjk18"]
[ext_resource type="Script" path="res://scenes/pressScene3_3_2.gd" id="1_ufqj8"]
[ext_resource type="Texture2D" uid="uid://ygwl50wjqmvg" path="res://assets/sprites/Rain de Luca (Apollo Justice) - Witness.png" id="3_g2sab"]
[ext_resource type="Texture2D" uid="uid://b5dwq1rgckqxk" path="res://assets/backgrounds/prosecutor-bench.png" id="3_su7nf"]
[ext_resource type="Texture2D" uid="uid://c786m4q5scs3b" path="res://assets/backgrounds/defense-bench.png" id="4_a7xvs"]
[ext_resource type="Texture2D" uid="uid://bhxjqckw54ita" path="res://assets/sprites/Ms. Cris (Mia Fey) (1).png" id="4_lyusy"]
[ext_resource type="Texture2D" uid="uid://dp66xco4vbvku" path="res://assets/sprites/sunny-sprite.png" id="5_3xbb2"]
[ext_resource type="Texture2D" uid="uid://1l03kq0eie04" path="res://assets/backgrounds/witness-stand.png" id="5_e6vrh"]
[ext_resource type="FontFile" uid="uid://c42vn22udh74l" path="res://FOT-ModeMinBLargeStd-R.otf" id="6_0mm8q"]
[ext_resource type="Texture2D" uid="uid://bhn534hh0wssh" path="res://assets/sprites/judge-sprite.png" id="6_sejnq"]
[ext_resource type="Texture2D" uid="uid://cbgex0h8g788y" path="res://assets/ui/cornerButton_unpressed.png" id="7_5hruk"]
[ext_resource type="PackedScene" uid="uid://bwo7hmrw6dsbj" path="res://inventory/inventory_ui.tscn" id="8_xb7jo"]
[ext_resource type="AudioStream" uid="uid://dx6vblsbtd8lw" path="res://audio/blip.mp3" id="9_vsu2j"]
[ext_resource type="AudioStream" uid="uid://co66kk6avp7av" path="res://audio/typewriter.mp3" id="10_cbgju"]

[sub_resource type="Animation" id="Animation_6vik3"]
resource_name = "blink"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 7]
}

[sub_resource type="Animation" id="Animation_tg6oo"]
resource_name = "talk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.9, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wwaya"]
_data = {
"blink": SubResource("Animation_6vik3"),
"talk": SubResource("Animation_tg6oo")
}

[sub_resource type="Animation" id="Animation_ra85v"]
resource_name = "Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [80]
}

[sub_resource type="Animation" id="Animation_6uo0m"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [80, 81, 82, 83]
}

[sub_resource type="Animation" id="Animation_tdpgy"]
resource_name = "Thinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [91]
}

[sub_resource type="Animation" id="Animation_tepf1"]
resource_name = "arrogant"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [112, 113]
}

[sub_resource type="Animation" id="Animation_ctm0k"]
resource_name = "lighthapak"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [110, 111]
}

[sub_resource type="Animation" id="Animation_5qpvx"]
resource_name = "staring"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [112]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p5h4f"]
_data = {
"Blinking": SubResource("Animation_ra85v"),
"Talking": SubResource("Animation_6uo0m"),
"Thinking": SubResource("Animation_tdpgy"),
"arrogant": SubResource("Animation_tepf1"),
"lighthapak": SubResource("Animation_ctm0k"),
"staring": SubResource("Animation_5qpvx")
}

[sub_resource type="Animation" id="Animation_sjpap"]
resource_name = "Blinking"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 3, 2, 3]
}

[sub_resource type="Animation" id="Animation_3m1ap"]
resource_name = "Suspicious_Blinking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}

[sub_resource type="Animation" id="Animation_qlcie"]
resource_name = "Suspicious_Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.4001, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1.03526, 1, 1, 1.03526, 1),
"update": 1,
"values": [60, 68, 71, 69, 68, 71]
}

[sub_resource type="Animation" id="Animation_b2ai6"]
resource_name = "Table_Whip"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_olobw"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.2001, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 1, 4, 0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pgmlq"]
_data = {
"Blinking": SubResource("Animation_sjpap"),
"Suspicious_Blinking": SubResource("Animation_3m1ap"),
"Suspicious_Talking": SubResource("Animation_qlcie"),
"Table_Whip": SubResource("Animation_b2ai6"),
"Talking": SubResource("Animation_olobw")
}

[sub_resource type="Animation" id="Animation_ru1pl"]
resource_name = "Blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_qhkb8"]
resource_name = "NormalTalk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [12, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yfpy1"]
_data = {
"Blinking": SubResource("Animation_ru1pl"),
"NormalTalk": SubResource("Animation_qhkb8")
}

[sub_resource type="Animation" id="Animation_wbw64"]
resource_name = "Counter"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [105, 102, 103, 104, 105]
}

[sub_resource type="Animation" id="Animation_vnbgn"]
resource_name = "Grit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [105]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dg1ca"]
_data = {
"Counter": SubResource("Animation_wbw64"),
"Grit": SubResource("Animation_vnbgn")
}

[sub_resource type="Animation" id="Animation_xnak8"]
resource_name = "Blinking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 0.7001, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 8, 9, 9, 8]
}

[sub_resource type="Animation" id="Animation_x823a"]
resource_name = "Talking"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pi1fh"]
_data = {
"Blinking": SubResource("Animation_xnak8"),
"Talking": SubResource("Animation_x823a")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o66bs"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2q02l"]
texture = ExtResource("7_5hruk")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_omgjx"]
texture = ExtResource("7_5hruk")
modulate_color = Color(0.836576, 0.711346, 0.605006, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pmdmh"]
texture = ExtResource("7_5hruk")
modulate_color = Color(0.541247, 0.291974, 0.221316, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gq1y2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v7w84"]

[node name="Node2D" type="Node2D"]

[node name="pressScene3_3_2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_ufqj8")

[node name="Background" type="TextureRect" parent="pressScene3_3_2"]
layout_mode = 0
offset_right = 1930.0
offset_bottom = 1091.0
texture = ExtResource("1_cjk18")

[node name="WitnessSprite" type="Sprite2D" parent="pressScene3_3_2/Background"]
position = Vector2(935, 497)
scale = Vector2(1.40612, 1.39698)
texture = ExtResource("3_g2sab")
hframes = 4
vframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_3_2/Background/WitnessSprite"]
libraries = {
"": SubResource("AnimationLibrary_wwaya")
}

[node name="mscris_sprite" type="Sprite2D" parent="pressScene3_3_2"]
position = Vector2(601, 542)
scale = Vector2(1.51966, 1.48716)
texture = ExtResource("4_lyusy")
hframes = 10
vframes = 14
frame = 91

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_3_2/mscris_sprite"]
libraries = {
"": SubResource("AnimationLibrary_p5h4f")
}

[node name="sunny_sprite" type="Sprite2D" parent="pressScene3_3_2"]
position = Vector2(1312, 520.825)
scale = Vector2(1.64267, 1.58515)
texture = ExtResource("5_3xbb2")
hframes = 12
vframes = 15

[node name="sunny_sprite_animation" type="AnimationPlayer" parent="pressScene3_3_2/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pgmlq")
}

[node name="sunny_sprite_animation2" type="AnimationPlayer" parent="pressScene3_3_2/sunny_sprite"]
libraries = {
"": SubResource("AnimationLibrary_yfpy1")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="pressScene3_3_2/sunny_sprite"]
root_node = NodePath("../sunny_sprite_animation2")
libraries = {
"": SubResource("AnimationLibrary_dg1ca")
}

[node name="judge_sprite" type="Sprite2D" parent="pressScene3_3_2"]
position = Vector2(982, 432)
scale = Vector2(1.42768, 1.38911)
texture = ExtResource("6_sejnq")
hframes = 10
vframes = 5

[node name="judge_sprite_animation" type="AnimationPlayer" parent="pressScene3_3_2/judge_sprite"]
libraries = {
"": SubResource("AnimationLibrary_pi1fh")
}

[node name="prosecutor-bench" type="TextureRect" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = -279.0
offset_top = -115.0
offset_right = 1925.0
offset_bottom = 1090.0
texture = ExtResource("3_su7nf")

[node name="defense-bench" type="TextureRect" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = 6.0
offset_top = -93.0
offset_right = 2146.0
offset_bottom = 1090.0
texture = ExtResource("4_a7xvs")

[node name="witness-stand" type="TextureRect" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = -122.0
offset_top = -83.0
offset_right = 2055.0
offset_bottom = 1088.0
texture = ExtResource("5_e6vrh")

[node name="DialogueBoxButton" type="Button" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = -1932.0
offset_top = 803.0
offset_right = -1924.0
offset_bottom = 811.0
scale = Vector2(1567.73, 159.941)
theme_override_styles/focus = SubResource("StyleBoxEmpty_o66bs")

[node name="DialogueBox" type="Polygon2D" parent="pressScene3_3_2"]
position = Vector2(-9, 0)
scale = Vector2(1.02753, 0.99655)
color = Color(0.168627, 0.168627, 0.168627, 0.470588)
polygon = PackedVector2Array(3, 803, 1951, 803, 1951, 1123, 3, 1123)

[node name="PersonNameBox" type="Polygon2D" parent="pressScene3_3_2"]
position = Vector2(145, 763)
scale = Vector2(0.807388, 0.375424)
color = Color(0.48825, 0.315, 0.7, 0.917647)
polygon = PackedVector2Array(-0.199969, 1.66217, 1.67047, -2.6637, 310.698, -2.6637, 365.822, 98.5553, 306.562, 188.651, 152.066, 188.651, -0.973211, 188.651, -60.1351, 90.5643)

[node name="DialogueText" type="Label" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = 219.0
offset_top = 858.0
offset_right = 667.0
offset_bottom = 924.0
scale = Vector2(3.32776, 3.02778)
theme_override_fonts/font = ExtResource("6_0mm8q")
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[node name="PersonNameText" type="Label" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = 160.0
offset_top = 780.0
offset_right = 254.0
offset_bottom = 801.0
scale = Vector2(2.31653, 2.09949)
theme_override_fonts/font = ExtResource("6_0mm8q")
metadata/_edit_use_anchors_ = true

[node name="CourtRecordButton" type="Button" parent="pressScene3_3_2"]
layout_mode = 0
offset_left = 1478.0
offset_top = -16.0
offset_right = 1597.0
offset_bottom = 9.0
scale = Vector2(3.82134, 4.93538)
theme_override_fonts/font = ExtResource("6_0mm8q")
theme_override_styles/normal = SubResource("StyleBoxTexture_2q02l")
theme_override_styles/hover = SubResource("StyleBoxTexture_omgjx")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pmdmh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gq1y2")
theme_override_styles/focus = SubResource("StyleBoxEmpty_v7w84")

[node name="CourtRecordText" type="Label" parent="pressScene3_3_2/CourtRecordButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.097823
anchor_top = -0.0529059
anchor_right = 0.0978255
anchor_bottom = -0.0529059
offset_left = 15.8363
offset_top = 9.22477
offset_right = 126.836
offset_bottom = 30.2248
scale = Vector2(0.689314, 0.523945)
theme_override_fonts/font = ExtResource("6_0mm8q")
text = "Court Record"
metadata/_edit_use_anchors_ = true

[node name="Inventory_UI" parent="pressScene3_3_2" instance=ExtResource("8_xb7jo")]
visible = false

[node name="blip" type="AudioStreamPlayer2D" parent="pressScene3_3_2"]
stream = ExtResource("9_vsu2j")
volume_db = 6.559

[node name="typewrite" type="AudioStreamPlayer2D" parent="pressScene3_3_2"]
stream = ExtResource("10_cbgju")
volume_db = 5.943
